[tool.poetry]
name = "game"
# Don't change version here. See Makefile
version = "0.0.0"
description = "Game"
authors = ["me"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
isort = "^5.12.0"
black = "^23.10.1"
flake8 = "^6.1.0"
numpy = "^1.26.1"
cython = "^3.0.8"
pymap2d = "^0.1.15"
